# scalabel

./: .gitignore  Dockerfile  SETUP_GUIDE.md  SETUP_WINDOWS.md  docker-compose.yml  out_scalable_base_v2.json
.claude/: settings.local.json
app/config/: default_config.yml
app/html/: dashboard.html  label.html
app/src/common/: session.ts  session_init.tsx
app/src/components/: dashboard.tsx  dashboard_header.tsx  drawable_viewer.tsx  homography_canvas.tsx  image_canvas.tsx  label2d_canvas.tsx  label_layout.tsx  toolbar.tsx  toolbar_category.tsx  viewer.ts  viewer2d.tsx  window.tsx
app/src/const/: common.ts  connection.ts
app/src/drawable/: util.ts
app/src/drawable/2d/: box2d.ts  (+5 more)
app/src/functional/: states.ts
app/src/server/: defaults.ts  embed_cleanup.ts  listeners.ts  main.ts  project_store.ts
app/src/styles/: label.ts
app/src/types/: config.ts  state.ts
app/src/view_config/: image.ts
app/test/server/: embed_cleanup.test.ts  embed_roundtrip.test.ts  listeners_embed.test.ts
configs/: categories_slc_4_20262002 1.yaml  items_slc_4_20262002 1.yaml
docs/superpowers/plans/: 2026-04-22-standalone-annotation-canvas.md  (+1 more)
scalabel_json_to_tilewise_annotation/: Dockerfile
scalabel_json_to_tilewise_annotation/src/: main.py  process_image.py  scalable_to_coco.py  service.py  settings.py  split_annotation.py
scalable_json_to_tilewise_annotation/: .gitignore  Dockerfile  pyproject.toml
scalable_json_to_tilewise_annotation/src/: constants.py  logger_config.py  settings.py
scripts/: env_windows.yml  env_windows_annotate.yml  requirements_annotate.txt
(+2 files in other folders)
