[project]
name = "tile-annotation-backend"
version = "0.1.0"
description = "Backend service for Scalabel tile-wise data export"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.116.0,<1.0.0",
  "uvicorn[standard]>=0.35.0,<1.0.0",
  "numpy>=1.26.0,<3.0.0",
  "opencv-python-headless>=4.12.0.88,<5.0.0",
  "matplotlib==3.9.2",
]

[tool.uv]
package = false
